--- a/package.json
+++ b/package.json
@@ -13,5 +13,12 @@
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@nuxt/test-utils": "^3.14.2",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^15.7.4",
+    "playwright-core": "^1.47.2",
+    "vitest": "^2.1.1"
   }
 }
